# data-access-optimizer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py
src/generator/: manifest_generator.py  parquet_indexer.py  s3_path_fetcher.py
src/lookup/: __init__.py  lookup_demo.ipynb  manifest_lookup.py  parquet_lookup.py
